@@ -149,7 +149,7 @@
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-surefire-plugin</artifactId>
                   <configuration>
-                      <argLine>@{argLine} -Djava.awt.headless=true -XX:MaxPermSize=512m</argLine>
+                      <argLine>@{argLine} -Djava.awt.headless=true</argLine>
                       <reuseForks>false</reuseForks>
                       <forkCount>1</forkCount>
                   </configuration>
